# DRF_Viewsets_Generics_24.1

./: .env_sample  Dockerfile  README.md  docker-compose.yaml  lessons_data.json  pyproject.toml  users_data.json
config/: celery.py  settings.py  urls.py
lessons/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lessons/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_coursepayment.py
users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py
